--- a/src/styles/bodyStyle.css
+++ b/src/styles/bodyStyle.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Libertinus+Math&family=Libertinus+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    font-family: "Nunito", sans-serif;
+}
+
 body{
+    font-family: "Nunito", sans-serif;
     margin: 0;
 }
 
