--- a/src/styles/taskDisplayStyle.css
+++ b/src/styles/taskDisplayStyle.css
@@ -5,12 +5,13 @@
     display: flex;
     flex-direction: column;
     background-color: #b4b6ac;
-
+    gap:2vh;
     align-items: center;
 }
 
 .displayContent h1{
     font-size: 3vw;
+    margin: 1.5vh 0 0 0;
 }
 
 .grid{
@@ -18,5 +19,21 @@
     height: 80vh;
     background-color: #D2D4C8;
     display: grid;
+}
 
+.addTask{
+    display: flex;
+    flex-direction: row;
+    gap:3vw;
+
+}
+
+#taskInput{
+    width: 15vw;
+    height: 5vh;
+}
+
+#taskSubmit{
+    width: 5vw;
+    font-size: 1.3vw;
 }
