--- a/src/styles/taskDisplayStyle.css
+++ b/src/styles/taskDisplayStyle.css
@@ -23,6 +23,7 @@
     grid-template-rows: repeat(4,20vh);
     padding: 2vh 3vw 2vh 3vw;
     overflow-y: auto;
+    overflow-x:hidden;
 }
 
 .addTask{
@@ -55,6 +56,16 @@
 
 .tile h2{
     margin: 0;
+}
+
+.deleteButton{
+    background-color: rgb(255, 75, 75);
+    border-style: solid;
+    color: black;
+    width: 5vw;
+    height: 5vh;
+    max-height: 5vh;
+    font-size: 1vw;
 }
 
 @media (max-width: 600px){
