--- a/src/styles/navStyle.css
+++ b/src/styles/navStyle.css
@@ -59,10 +59,10 @@
 }
 
 .projectHolder{
-    width: 20vw;
-    height: auto;
+    width: 21vw;
+    height: 60vh;
     max-height: 60vh;
-    padding-left: 2vw;
+    margin-left: 1vw;
 
     display: flex;
     flex-direction: column;
@@ -72,11 +72,38 @@
 
 .project{
     font-size: 2vw;
+    display: flex;
+    flex-direction: row;
     align-items: center;
 
     background-color: #cdcec971;
     border-width: 0;
     border-radius: 3px;
+}
+
+.projectList{
+    width: 17vw;
+    height: 5vh;
+    background-color: rgba(0,0,0,0);
+    border-width: 0;
+    font-size: 2vw;
+    display: flex;
+    align-items: center;
+    padding: 0.5vh 0.1vw 0.5vh 0.1vw;
+}
+
+.deleteProject{
+    width: 4vw;
+    height: 5vh;
+    font-size: 1.5vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;      /* horizontal centering */
+    justify-content: center; /* vertical centering */
+    background-color: rgba(0,0,0,0);
+    border-width: 0;
+    padding: 1vh 0.1vw 1vh 0.1vw;
+
 }
 
 .buttonHolder{
@@ -109,13 +136,13 @@
         width: 98vw;
         height: 12vh;
         flex-direction: row;
-        gap:2.5vw;
+        gap:3vw;
         padding: 1vh 1vw 1vh 1vw;
     }
 
 
     .tab {
-        width: 30vw;
+        width: 28vw;
         gap: 1vw;
     }
 
@@ -125,7 +152,7 @@
     }
 
     .tab p{
-        font-size: 2.8vh;
+        font-size: 2.5vh;
     }
 
     .projectHolder{
@@ -134,12 +161,36 @@
         height: auto;
         max-width: 30vh;
         overflow-y: auto;
+        margin-left: 2vw;
     }
 
     .project{
         width: 30vw;
         height: 8vh;
         font-size: 2vh;
+    }
+
+    .projectList{
+        width: 24vw;
+        height: 5vh;
+        background-color: rgba(0,0,0,0);
+        border-width: 0;
+        font-size: 2vh;
+        display: flex;
+        align-items: center;
+        padding: 0.5vh 0.1vw 0.5vh 0.1vw;
+    }
+
+    .deleteProject{
+        width: 6vw;
+        height: 5vh;
+        font-size: 1.5vh;
+        display: flex;
+        flex-direction: column;
+        background-color: rgba(0,0,0,0);
+        border-width: 0;
+        padding: 1vh 0.1vw 1vh 0.1vw;
+
     }
 
     .buttonHolder {
